--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Знакомство с ExtJS</title>
-</head>
-<body>
+﻿<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta charset="UTF-8">
+        <title>Знакомство с ExtJS</title>
+        <link rel="stylesheet" type="text/css" href="framework/extjs-4.1.1-src/extjs-4.1.1/resources/css/ext-all.css">
+        <script type="text/javascript" src="framework/extjs-4.1.1-src/extjs-4.1.1/ext-all-dev.js"></script>
+        <!--<script type="text/javascript" src="/framework/extjs-4.1.1-src/extjs-4.1.1/ext-all.js"></script>-->
+        <script type="text/javascript" src="js/app.js"></script>
+    </head>
+    <body>
 
-</body>
+    </body>
 </html>
